# alma

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  android-crossfile.txt  ios-crossfile.txt  meson.build  meson_options.txt  windows-crossfile.txt
bench/: benchmark.cpp  generate_matrices.py  quick_bench.cpp  run_all_bench.py
docs/: architecture.md  contributing.md  developer_note.md  high_level.md  index.md  low_level.md  paper.md  performance.md
docs/diagrams/: architecture-classdiagram.mmd  architecture-sequence.mmd  architecture.mmd  hld-classdiagram.mmd  hld-configuration.mmd  hld-partition-flow.mmd  hld.mmd  lld-alma-multiply-full.mmd  lld-classdiagram.mmd  lld-error.mmd  lld-lowrank-product.mmd  lld-memory.mmd  lld-sequence.mmd  lld.mmd  platforms.mmd
scripts/: build-common.sh  build-linux.sh  build-mac.sh  build-setup.sh  detect-pkgmgr.sh
src/: alma.cpp  alma.h  main.cpp
src/cli/: main.cpp
src/core/: alma.cpp  lapacke_android.cpp  lapacke_android.h
src/core/platform/: alma_android.cpp  alma_ios.cpp  alma_linux.cpp  alma_macos.cpp  alma_windows.cpp
src/include/alma/: alma.h  alma_cache.h
src/io/: csv_utils.h
tests/: test_alma.cpp  test_basic.cpp  test_csv.cpp  test_edge.cpp  test_large.cpp  test_ops.cpp  test_random.cpp  test_special.cpp  test_util.cpp  test_util.h
